test/data/semantic-errors/return-not-in-function.ava
var thisFunction = () -> ava "ava";
return;